[package]
name = "cita-forever"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
clap = "2"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
crossbeam-channel = "0.3.8"
cita-logger = "0.1.0"

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
