[package]
name = "cita-forever"
version = "1.0.0"
authors = ["Rivtower Technologies <contact@Rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
clap = "2"
util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
crossbeam-channel = "0.3.8"
cita-logger = "0.1.1"

[build-dependencies]
util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
